--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,7 @@
       <h1>Thomas Wallace Jr</h1>
       <h3>Software Developer</h3>
     </header>
-
+    <main>
 
         <div class='image-container'>
           <img src='images/family.jpg'>
@@ -22,6 +22,7 @@
       <hr class='large-hr'>
 
 
+          <section>
           <div class='body-container'>
           <h3>About Me</h3>
           <p>I am a software developer living in Wilkes-barre PA currently
@@ -38,9 +39,10 @@
             <li>Reading</li>
             <li>Bitcoin & Blockchain Technology</li>
           </ul>
-
+           </section>
 
             <hr class='small-hr'>
+            <section>
             <h3>Career</h3>
               <p>In 2010, I recieved my A.S in Computer Information Systems from
                 Luzerne County Community College. Upon graduating, I took a job at
@@ -65,8 +67,10 @@
                  isn't the career I yearn for. I've always regretted not continuing
                  my education and getting a tech job so I decided to take a leap
                  of faith and enrolled full-time at Thinkful!</p>
+            </section>
 
             <hr class='small-hr'>
+      </section>
             <h3>Contact Me</h3>
             <ol>
               <li><a href='mailto:twallace1015@icloud.com'>Email</a></li>
@@ -74,8 +78,9 @@
               <li><a href='https://github.com/TomWallaceJr' target='_blank'>GitHub</a></li>
               <li><a href='https://twitter.com/TomWallaceJr2' target='_blank'>Twitter</a></li>
             </ol>
-
+      </section>
             </div>
+    </main>
           <footer>
             <p>@ThomasWallaceJr</p>
           </footer>
