--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Thomas Wallace Jr Portfolio</title>
-    <meta name="viewport" content="width=device-width" charset="utf-8"/>
+    <meta name="viewport" content="width=device-width"/>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -13,7 +13,7 @@
     <main>
 
         <div class='image-container'>
-          <img src='images/family.jpg'>
+          <img src='images/family.jpg' alt='family'>
         </div>
 
 
