--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
   <head>
     <title>Thomas Wallace Jr Portfolio</title>
     <meta name="viewport" content="width=device-width"/>
