--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,7 @@
 
 
          
-          <div class='body-container'>
+          <section class='body-container'>
           <h3>About Me</h3>
           <p>I am a software developer living in Wilkes-barre PA currently
           attending a full-time Engineering Immersive Program at Thinkful. I've been
@@ -77,7 +77,7 @@
               <li><a href='https://github.com/TomWallaceJr' target='_blank'>GitHub</a></li>
               <li><a href='https://twitter.com/TomWallaceJr2' target='_blank'>Twitter</a></li>
             </ol>
-             </div>
+             </section>
   
            
     </main>
