--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,6 +11,7 @@
       <h3>Software Developer</h3>
     </header>
     <main>
+      <!-- container for image -->
         <div class='image-container'>
           <img src='images/family.jpg' alt='family'>
         </div>
@@ -18,10 +19,12 @@
 
       <h2 class='welcome'>Welcome To My Webpage!</h2>
 
+      <!-- large HR at top of page-->
       <hr class='large-hr'>
 
 
          
+      <!-- Entire body in one section tag -->
           <section class='body-container'>
           <h3>About Me</h3>
           <p>I am a software developer living in Wilkes-barre PA currently
