--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Thomas Wallace Jr Portfolio</title>
-    <meta name="viewport" content="width=device-width" charset="utf-8"/>
+    <meta name="viewport" content="width=device-width" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
@@ -26,7 +26,7 @@
         
 
     <div class='image-container'>
-      <img src='images/metree.jpg'> 
+      <img src='images/metree.jpg' alt='picofme'> 
     </div>
       <hr class='large-hr'>
 
@@ -141,9 +141,9 @@
               </div>
             </form>
             <ol class='contact'>
-              <li><a href='https://www.linkedin.com/in/tom-wallace-5696a517b/' target='_blank'><img src="images/linkedin.png"></a></li>
-              <li><a href='https://github.com/TomWallaceJr' target='_blank'><img src="images/githubpng.png"></a></li>
-              <li><a href='https://twitter.com/TomWallaceJr2' target='_blank'><img src="images/twitter.png"></a></li>
+              <li><a href='https://www.linkedin.com/in/tom-wallace-5696a517b/' target='_blank'><img src="images/linkedin.png" alt='linkedlogo'></a></li>
+              <li><a href='https://github.com/TomWallaceJr' target='_blank'><img src="images/githubpng.png" alt='githublogo'></a></li>
+              <li><a href='https://twitter.com/TomWallaceJr2' target='_blank'><img src="images/twitter.png" alt='twitterlogo'></a></li>
             </ol>
             </div>
             </div>
