--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -143,7 +143,7 @@
 
     <hr class='small-hr'>
     <div class='body-item'>
-      <h3 id="contact">Contact Me</h3>
+      <h4>Contact Me @ <a href="mailto:twallace1015@gmail.com">twallace1015@gmail.com</a></h4>
       <div class="contact-me">
         <form action="https://formspree.io/xjvanjdk" method="POST">
           <div class="contact-form">
@@ -165,7 +165,10 @@
             </div>
           </div>
         </form>
-        <ol class='contact'>
+        <hr class='small-hr'>
+        <h4>Connect with me on Social Media!!</h4>
+        <hr class='small-hr'>
+        <ol class="social-media">
           <li><a href='https://www.linkedin.com/in/tom-wallace-5696a517b/' target='_blank'><img
                 src="images/linkedin.png" alt='linkedlogo'></a></li>
           <li><a href='https://github.com/TomWallaceJr' target='_blank'><img src="images/githubpng.png"
