new color scheme

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -146,7 +146,7 @@
       <hr class='small-hr'>
       <div class='body-item'>
         <h4>Contact Me @ <a href="mailto:twallace1015@gmail.com">twallace1015@gmail.com</a></h4>
-        <div class="contact-me">
+        <div class="contact-me" id="contact">
           <form action="https://formspree.io/xjvanjdk" method="POST">
             <div class="contact-form">
               <div>
