fixes portfolio image sizing

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -119,6 +119,7 @@
       <h3 id="portfolio">Portfolio</h3>
       <div class="portfolio-container">
         <div class="project">
+          <h2>Petful</h2>
           <a href='https://petful-client-template.tomwallacejr.vercel.app/'><img src='images/petful.png' alt='petful'
               class='port-img'></a>
           <p>Fictional adoption agency for cats and dogs. Users enter their name which puts them at the end of
@@ -135,6 +136,7 @@
         </div>
 
         <div class="project">
+          <h2>Spanish Spaced-Rep</h2>
           <a href='https://spaced-repetition.tomwallacejr.vercel.app'><img src='images/spacerep.png' alt='spacedrep'
               class='port-img'></a>
           <p>Spanish language learning application that uses the spaced-repetition learning process. After registering
@@ -151,6 +153,7 @@
         </div>
 
         <div class="project">
+          <h2>Dealer Tokes</h2>
           <a href='https://dealer-tokes-client.tomwallacejr.vercel.app/register'><img src='images/dealertokes.png'
               alt='dealertokes' class='port-img'></a>
           <p>Final Capstone Project at Thinkful. This Web App is customized specifically for Poker Dealers. It allows
